# Pokant

./: .env.example  .env.production.template  .gitignore  CLAUDE.md  DEPLOY.md  README.md  analytics.html  call-breakdown.html  dashboard-modern.css  dashboard.html  demo.py  desktop_real_test.py  docker-compose.yml  form_test.html  process3_test.py  process4_test.py  results.html  settings.html  setup.html  short_demo.py  test-runs.html  testing.html  workflow1_test.py  workflow2_redo.py  workflow2_test.py  workflow3_test.py  workflow_context.py  workflow_desktop.py
.github/workflows/: ci.yml  deploy.yml
api/: dependencies.py  main.py
api/db/: engine.py
computeruse/: .env.example  .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  docker-compose.yml  pyproject.toml  setup.py
computeruse/backend/: browser_provider.py  db.py  storage.py  tasks.py
computeruse/backend/api/: main.py
computeruse/computeruse/: executor.py  models.py
dashboard/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
examples/: stagehand_example.py
scripts/: build-cloudflare-pages.sh  shared-copy.js  verify_production.py
sdk/: CONTRIBUTING.md  README.md  TODO-A1.md  TODO-A2.md  TODO-A3.md  TODO-B1.md  TODO-B2.md  TODO-B3.md  pyproject.toml
shared/: url_validator.py
tests/: conftest.py
workers/: browser_manager.py  captcha_solver.py  config.py  credential_injector.py  db.py  encryption.py  error_classifier.py  executor.py  main.py  metrics.py  models.py  output_validator.py  requirements.txt  retry_policy.py  session_manager.py  stuck_detector.py  tasks.py
(+174 files in other folders)
