[tool.poetry]
name = "computeruse"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.40.0"
browser-use = "^1.0.0"
playwright = "^1.40.0"
pydantic = "^2.5.0"
click = "^8.1.0"
rich = "^13.7.0"
python-dotenv = "^1.0.0"
pillow = "^10.0.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
celery = "^5.3.0"
redis = "^5.0.0"
asyncpg = "^0.29.0"
boto3 = "^1.34.0"
aiohttp = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
